Fixed the z-index for graph

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -27,6 +27,7 @@ h2 {font-size: 22px !important;}
     position: absolute;
     left: 0;
     top: 0;
+    z-index: 99999 !important;
 }
 
 /* Timeline section */
